k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: python-backend
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
